--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -5,8 +5,8 @@ body {
   height: 100%;
 }
 
-body {
-  background-image: url("../fondo_darkpaths.png");
+.be {
+  background-image: url("../background-image.jpg");
   background-size: auto;
   background-position: center;
   display: flex;
