--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -11977,11 +11977,79 @@ body {
 }
 
 body {
-  background-image: url("../fondo_darkpaths.png");
+  background-image: url("../backgroundImage.jpg");
   background-size: auto;
   background-position: center;
   display: flex;
   flex-direction: column;
+}
+
+#body {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+}
+#body #body-row {
+  --bs-gutter-x: 1;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
+}
+#body #solution {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+  background-color: rgba(120, 6, 15, 0.8);
+  border: 2px solid white;
+}
+@media (min-width: 768px) {
+  #body #solution {
+    flex: 0 0 auto;
+    width: 16.66666667%;
+  }
+}
+#body #development {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+  background-color: rgba(120, 6, 15, 0.8);
+  border: 2px solid white;
+  color: white;
+}
+@media (min-width: 768px) {
+  #body #development {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+  }
+}
+#body #latest-news {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+  background-color: rgba(120, 6, 15, 0.8);
+  border: 2px solid white;
+}
+@media (min-width: 768px) {
+  #body #latest-news {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+  }
 }
 
 .content {
@@ -12012,10 +12080,10 @@ body {
   overflow: visible;
   text-align: center;
   margin: 0;
-  padding-top: 3.5rem;
+  padding-top: 3.1rem;
   font-weight: bold;
   color: white;
-  padding-bottom: 5.45rem;
+  padding-bottom: 5.05rem;
 }
 .top-menu ul {
   list-style-type: none;
@@ -12051,6 +12119,19 @@ body {
   width: 100%;
   flex-shrink: 0;
   z-index: 999;
+}
+
+#footer-general {
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  flex-shrink: 0;
+  z-index: 999;
+  background: rgba(120, 2, 15, 0.5);
 }
 
 @media screen and (max-width: 768px) {
