--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-  background-image: url("../img/background-img.jpg");
+  background-image: url("../img/background-image.jpg");
   background-size: auto;
   background-position: center;
   display: flex;
