new background iamge

--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -11977,7 +11977,7 @@ body {
 }
 
 body {
-  background-image: url("../img/background-image.jpg");
+  background-image: url("../img/background-img.jpg");
   background-size: auto;
   background-position: center;
   display: flex;
