--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -11977,14 +11977,14 @@ body {
 }
 
 body {
-  background-image: url(../img/background-image.jpg);
+  background-image: url(../img/background-image.png);
   background-size: auto;
   background-position: center;
   display: flex;
   flex-direction: column;
 }
 
-#body {
+.body {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   width: 100%;
@@ -11992,8 +11992,10 @@ body {
   padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-right: auto;
   margin-left: auto;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
-#body #body-row {
+.body .body-row-OneColumn {
   --bs-gutter-x: 1;
   --bs-gutter-y: 0;
   display: flex;
@@ -12001,52 +12003,55 @@ body {
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
+  justify-content: center;
 }
-#body #solution {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-top: var(--bs-gutter-y);
-  background: linear-gradient(to bottom, #78020f, #280206);
-  border: 2px solid white;
-}
-@media (min-width: 768px) {
-  #body #solution {
-    flex: 0 0 auto;
-    width: 16.66666667%;
-  }
-}
-#body #development {
-  flex-shrink: 0;
-  width: 100%;
-  max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-top: var(--bs-gutter-y);
-  background: linear-gradient(to bottom, #78020f, #280206);
-  border: 2px solid white;
+.body .title {
+  text-align: center;
   color: white;
+  padding: 1.2rem;
+  font-size: 5rem;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
-@media (min-width: 768px) {
-  #body #development {
-    flex: 0 0 auto;
-    width: 33.33333333%;
+@media only screen and (max-width: 640px) {
+  .body .title {
+    font-size: 2.5rem;
   }
 }
-#body #latest-news {
+.body .boxTwoRow, .body .boxOneRow {
+  background: rgba(255, 0, 0, 0.248);
+  color: rgb(215, 214, 214);
+  border: 0.5px outset black;
+  text-align: justify !important;
+  max-width: 100%;
+}
+.body .boxOneRow {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-top: var(--bs-gutter-y);
-  background-color: rgba(120, 6, 15, 0.8);
-  border: 2px solid white;
 }
-@media (min-width: 768px) {
-  #body #latest-news {
+@media (min-width: 576px) {
+  .body .boxOneRow {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+}
+.body .boxTwoRow {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+  margin: 1rem;
+  border: 0.7px outset rgb(255, 255, 255);
+}
+@media (min-width: 576px) {
+  .body .boxTwoRow {
     flex: 0 0 auto;
     width: 33.33333333%;
   }
@@ -12080,26 +12085,25 @@ body {
   overflow: visible;
   text-align: center;
   margin: 0;
-  padding-top: 3.1rem;
+  padding-top: 2rem;
   font-weight: bold;
-  color: white;
-  padding-bottom: 5.05rem;
+  color: rgb(215, 214, 214);
+  padding-bottom: 4.95rem;
 }
 .top-menu ul {
   list-style-type: none;
   width: 100%;
   position: absolute;
-  padding-top: 5.2rem;
   bottom: 0;
 }
 .top-menu ul li {
   display: inline;
 }
 .top-menu ul li a {
-  color: white;
+  color: rgb(215, 214, 214);
   font-size: 1.1rem;
   text-decoration: none;
-  padding: 0.3rem 1.5rem;
+  padding: 0.8rem 1.5rem;
 }
 .top-menu ul li a.is-active {
   background: rgba(250, 250, 250, 0.15);
@@ -12113,34 +12117,34 @@ body {
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
-  color: white;
-  position: fixed;
+  color: rgb(215, 214, 214);
+  margin-top: auto;
   bottom: 0;
   width: 100%;
   flex-shrink: 0;
   z-index: 999;
+  position: fixed;
 }
 
 #footer-general {
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
-  color: white;
-  position: fixed;
+  color: rgb(215, 214, 214);
+  margin-top: auto;
   bottom: 0;
   width: 100%;
   flex-shrink: 0;
   z-index: 999;
-  background: rgba(120, 2, 15, 0.5);
+  background: linear-gradient(to bottom, #78020f, #280206);
 }
-
 @media screen and (max-width: 768px) {
-  .footer-index {
+  #footer-general .footer-index {
     padding: 1rem;
     align-items: center;
     justify-content: space-between;
-    color: white;
-    position: fixed;
+    color: rgb(215, 214, 214);
+    margin-top: auto;
     bottom: 0;
     width: 100%;
     flex-shrink: 0;
