--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -11976,6 +11976,14 @@ body {
   height: 100%;
 }
 
+div {
+  padding: 1rem;
+}
+
+h3, .h3 {
+  text-align: center !important;
+}
+
 body {
   background-image: url(../img/background-image.png);
   background-size: auto;
@@ -12025,6 +12033,7 @@ body {
   border: 0.5px outset black;
   text-align: justify !important;
   max-width: 100%;
+  text-align: center;
 }
 .body .boxOneRow {
   flex-shrink: 0;
@@ -12152,4 +12161,11 @@ body {
     padding: 0.5rem;
     font-size: 14px;
   }
+}
+
+.imgStyle {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  align-content: center;
 }/*# sourceMappingURL=style.css.map */
