--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -3,6 +3,7 @@
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 
+
 html,
 body {
   height: 100%;
@@ -12,6 +13,14 @@ div {
   padding: 1rem;
 }
 
+header{
+  #logo{
+    position: relative;
+    overflow: visible;
+    left: auto;
+
+  }
+}
 h3{
   text-align: center !important;
 }
@@ -196,3 +205,4 @@ body {
   padding: 2rem;
   align-content: center;
 }
+
