--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -12270,6 +12270,9 @@ body {
     width: auto;
     height: auto;
   }
+  #contacto-text ul a {
+    font-size: 1.2rem;
+  }
 }
 @media only screen and (max-width: 760px) and (max-width: 768px) {
   ul {
