Nueva imagen diseño

--- a/Proyecto Personal Website/css/style.css
+++ b/Proyecto Personal Website/css/style.css
@@ -12036,7 +12036,10 @@ body {
 #body #gym,
 #body #caminatas,
 #body #series,
-#body #contacto, #body #programacion, #body #basesDeDatos, #body #diseño, #body #acercaDe, #body #misObjetivos {
+#body #contacto,
+#body #programacion,
+#body #basesDeDatos,
+#body #diseño, #body #paralela, #body #acercaDe, #body #misObjetivos {
   background: rgba(255, 0, 0, 0.248);
   color: rgb(215, 214, 214);
   text-align: justify !important;
@@ -12066,7 +12069,10 @@ body {
 #body #gym,
 #body #caminatas,
 #body #series,
-#body #contacto, #body #programacion, #body #basesDeDatos, #body #diseño {
+#body #contacto,
+#body #programacion,
+#body #basesDeDatos,
+#body #diseño, #body #paralela {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
@@ -12080,7 +12086,10 @@ body {
   #body #gym,
   #body #caminatas,
   #body #series,
-  #body #contacto, #body #programacion, #body #basesDeDatos, #body #diseño {
+  #body #contacto,
+  #body #programacion,
+  #body #basesDeDatos,
+  #body #diseño, #body #paralela {
     flex: 0 0 auto;
     width: 33.33333333%;
   }
@@ -12090,7 +12099,10 @@ body {
 #gym-text,
 #caminatas-text,
 #series-text,
-#acercaDe-text, #programacion-text, #basesDeDatos-text, #diseño-text {
+#acercaDe-text,
+#programacion-text,
+#basesDeDatos-text,
+#diseño-text, #paralela-text {
   padding: 2.5%;
   text-align: justify;
 }
