--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -101,7 +101,10 @@ body {
   #gym,
   #caminatas,
   #series,
-  #contacto, #programacion , #basesDeDatos ,#diseño {
+  #contacto,
+  #programacion,
+  #basesDeDatos,
+  #diseño , #paralela {
     @extend %boxGeneral;
     @include make-col-ready();
 
@@ -121,7 +124,10 @@ body {
 #gym-text,
 #caminatas-text,
 #series-text,
-#acercaDe-text , #programacion-text ,  #basesDeDatos-text, #diseño-text{
+#acercaDe-text,
+#programacion-text,
+#basesDeDatos-text,
+#diseño-text , #paralela-text {
   padding: 2.5%;
   text-align: justify;
 }
@@ -278,7 +284,7 @@ body {
 .imgStyle {
   width: 100%;
   height: 100%;
-  
+
   align-content: center;
 }
 
@@ -308,9 +314,9 @@ body {
     height: auto;
   }
 
-  #contacto-text{
-    ul{
-      a{
+  #contacto-text {
+    ul {
+      a {
         font-size: 1.2rem;
       }
     }
@@ -320,6 +326,7 @@ body {
     ul {
       top: 85px;
       right: 8.8%;
+
       li {
         a {
           padding: 25px 20px;
