--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -96,6 +96,7 @@ body {
     display: flex;
     font-size: 18px;
     max-width: 90%;
+    margin: 2rem;
   }
 
   #gym,
@@ -108,13 +109,15 @@ body {
     @extend %boxGeneral;
     @include make-col-ready();
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(lg) {
       @include make-col(4);
     }
 
     margin: 0.5rem;
     border: $border-White;
   }
+
+  max-height: 40%;
 
 }
 
@@ -283,7 +286,7 @@ body {
 
 .imgStyle {
   width: 100%;
-  height: 100%;
+  height: 14rem;
 
   align-content: center;
 }
@@ -295,7 +298,7 @@ body {
   height: 25%;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 768px) {
   #title {
     font-size: 2.5rem !important;
   }
@@ -307,6 +310,7 @@ body {
 
   #acercaDe {
     flex-direction: column;
+    width: 100%;
   }
 
   #image-acercaDe {
@@ -322,7 +326,7 @@ body {
     }
   }
 
-  @media screen and (max-width: 768px) {
+
     ul {
       top: 85px;
       right: 8.8%;
@@ -336,4 +340,3 @@ body {
       }
     }
   }
-}
