--- a/Proyecto Personal Website/css/style.scss
+++ b/Proyecto Personal Website/css/style.scss
@@ -91,7 +91,9 @@ body {
     border: $border-Black;
   }
 
-  #acercaDe {
+  #acercaDe,
+  #compañeros,
+  #profesores {
     @extend %boxGeneral;
     display: flex;
     font-size: 18px;
@@ -105,7 +107,8 @@ body {
   #contacto,
   #programacion,
   #basesDeDatos,
-  #diseño , #paralela {
+  #diseño,
+  #paralela {
     @extend %boxGeneral;
     @include make-col-ready();
 
@@ -130,7 +133,10 @@ body {
 #acercaDe-text,
 #programacion-text,
 #basesDeDatos-text,
-#diseño-text , #paralela-text {
+#diseño-text,
+#paralela-text,
+#compañeros-text,
+#profesores-text {
   padding: 2.5%;
   text-align: justify;
 }
@@ -292,7 +298,7 @@ body {
 }
 
 
-#image-acercaDe {
+#image-acercaDe , #image-compañeros , #image-profesores {
   @extend .imgStyle;
   width: 25%;
   height: 25%;
@@ -308,12 +314,12 @@ body {
     width: 200px;
   }
 
-  #acercaDe {
+  #acercaDe , #compañeros , #profesores {
     flex-direction: column;
     width: 100%;
   }
 
-  #image-acercaDe {
+  #image-acercaDe , #image-compañeros , #image-profesores {
     width: auto;
     height: auto;
   }
@@ -327,16 +333,16 @@ body {
   }
 
 
-    ul {
-      top: 85px;
-      right: 8.8%;
+  ul {
+    top: 85px;
+    right: 8.8%;
 
-      li {
-        a {
-          padding: 25px 20px;
-          font-size: 0.8rem !important;
+    li {
+      a {
+        padding: 25px 20px;
+        font-size: 0.8rem !important;
 
-        }
       }
     }
   }
+}
